--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -15,9 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 91.0.4472\n",
+      "Get LATEST driver version for 91.0.4472\n",
+      "Driver [C:\\Users\\Happyful\\.wdm\\drivers\\chromedriver\\win32\\91.0.4472.101\\chromedriver.exe] found in cache\n"
+     ]
+    }
+   ],
    "source": [
     "# Set the executable path and initialize Splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
@@ -77,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA's Mars 2020 Heads Into the Test Chamber</div>"
+       "<div class=\"content_title\">NASA's Perseverance Rover 100 Days Out</div>"
       ]
      },
      "execution_count": 5,
@@ -97,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "\"NASA's Mars 2020 Heads Into the Test Chamber\""
+       "\"NASA's Perseverance Rover 100 Days Out\""
       ]
      },
      "execution_count": 6,
@@ -119,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "'In this time-lapse video taken at JPL, engineers move the Mars 2020 rover into a large vacuum chamber for testing in Mars-like environmental conditions.'"
+       "\"Mark your calendars: The agency's latest rover has only about 8,640,000 seconds to go before it touches down on the Red Planet, becoming history's next Mars car.\""
       ]
      },
      "execution_count": 7,
@@ -180,7 +193,7 @@
        "<link href=\"css/app.css\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<link href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<title>Space Image</title>\n",
-       "<style type=\"text/css\">.fancybox-margin{margin-right:0px;}</style></head>\n",
+       "<style type=\"text/css\">.fancybox-margin{margin-right:17px;}</style></head>\n",
        "<body>\n",
        "<div class=\"header\">\n",
        "<nav class=\"navbar navbar-expand-lg\">\n",
@@ -375,7 +388,7 @@
        "<link href=\"js/fancyBox/jquery.fancybox.css?v=2.1.5\" media=\"screen\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<link href=\"js/fancyBox/helpers/jquery.fancybox-thumbs.css?v=1.0.7\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<script src=\"js/fancyBox/helpers/jquery.fancybox-thumbs.js?v=1.0.7\" type=\"text/javascript\"></script>\n",
-       "<div class=\"fancybox-overlay fancybox-overlay-fixed\" style=\"width: auto; height: auto; display: block;\"><div class=\"fancybox-wrap fancybox-desktop fancybox-type-image\" style=\"width: 670px; height: 380px; position: absolute; top: 110px; left: 65px; opacity: 0.100036; overflow: hidden;\" tabindex=\"-1\"><div class=\"fancybox-skin\" style=\"padding: 15px; width: auto; height: auto;\"><div class=\"fancybox-outer\"><div class=\"fancybox-inner\" style=\"overflow: visible; width: 640px; height: 350px;\"><img alt=\"\" class=\"fancybox-image\" src=\"image/featured/mars3.jpg\"/></div></div></div></div></div></body></html>"
+       "<div class=\"fancybox-overlay fancybox-overlay-fixed\" style=\"width: auto; height: auto; display: block;\"><div class=\"fancybox-wrap fancybox-desktop fancybox-type-image\" style=\"width: 670px; height: 380px; position: absolute; top: 125px; left: 173px; opacity: 0.881881; overflow: hidden;\" tabindex=\"-1\"><div class=\"fancybox-skin\" style=\"padding: 15px; width: auto; height: auto;\"><div class=\"fancybox-outer\"><div class=\"fancybox-inner\" style=\"overflow: visible; width: 640px; height: 350px;\"><img alt=\"\" class=\"fancybox-image\" src=\"image/featured/mars3.jpg\"/></div></div></div></div></div></body></html>"
       ]
      },
      "execution_count": 10,
@@ -679,12 +692,39 @@
     "# 2. Create a list to hold the images and titles.\n",
     "hemisphere_image_urls = []\n",
     "\n",
-    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n"
+    "html = browser.html\n",
+    "html_soup = soup(html, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "h_soup = html_soup.find_all('div', class_='item')\n",
+    "\n",
+    "for s in h_soup:\n",
+    "    # Find Title\n",
+    "    title_soup = s.find_all('div',class_='description')[0]\n",
+    "    title = title_soup.find_all('a',class_='itemLink product-item')[0].get_text().strip()\n",
+    "    \n",
+    "    # Find first URL\n",
+    "    img_url_rel = title_soup.find_all('a',class_='itemLink product-item')[0]['href']\n",
+    "    first_url = f'https://marshemispheres.com/{img_url_rel}'\n",
+    "    \n",
+    "    # Go to first URL and pull enhanced Image URL\n",
+    "    browser.visit(first_url)\n",
+    "    img_url = browser.links.find_by_text('Sample').first['href']\n",
+    "    \n",
+    "    # Add Title and Image URL to hemisphere_image_urls\n",
+    "    hemisphere_image_urls.append({'img_url': img_url, 'title': title})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +740,7 @@
        "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
